--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
                 class="btn btn-primary"
                 type="button"
                 data-bs-toggle="offcanvas"
-                data-bs-target="#offcanvasExample"
-                aria-controls="offcanvasExample"
+                data-bs-target="#Canvas-libro"
+                aria-controls="Canvas-libro"
               >
                 Aggiungi libro
               </button>
@@ -106,7 +106,7 @@
               <div
                 class="offcanvas offcanvas-start w-100 overflo"
                 tabindex="-1"
-                id="offcanvasExample"
+                id="Canvas-libro"
                 aria-labelledby="offcanvasExampleLabel"
               >
                 <div>
